--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "dependencies": {
     "antd-mobile-rn": "^2.2.1",
+    "lodash": "^4.17.10",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-action-button": "^2.8.4",
     "react-native-easy-toast": "^1.1.0",
-    "react-navigation": "^2.9.3"
+    "react-native-gifted-chat": "^0.4.3",
+    "react-native-image-picker": "^0.26.10",
+    "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.9.3",
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
